apps/app2/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  #replicas: 1
  selector:
      matchLabels:
        app: app2  
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: httpd:2.4
        imagePullPolicy: Always
        ports:
        - containerPort: 80
