apps/app2/base/se.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-in-app2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: app2
  type: NodePort
