apps/app2/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  #- host: myservicea.foo.org
  - http:
      paths:
      - path: xxx
        pathType: Prefix
        backend:
          service:
            name: svc-in-app2
            port:
              number: 80
  ingressClassName: nginx
